[package]
name = "marching_cubes"
version = "0.1.0"
edition = "2018"
resolver = "2"

[[bin]] 
name = "main"
path = "src/main.rs"



[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
env_logger = "0.9"
pollster = "0.2"
image = "0.23"
log = "0.4"
rayon = "1.4"
tobj = "3.0"
wgpu = "0.10.1"
winit = "0.25"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
